# C--Assign8

./: .gitignore  CMakeLists.txt
CSharpApp/: Program.cs
cpp_lib/include/: math_lib.h
cpp_lib/src/: math_lib.cpp
tests/: CMakeLists.txt  math_lib_tests.cpp
